diesel_compile_tests/tests/fail/derive/bad_column_name.stderr
error: unexpected end of input, expected `=`
  --> $DIR/bad_column_name.rs:14:13
   |
14 |     #[diesel(column_name)]
   |             ^^^^^^^^^^^^^

error: expected `=`
  --> $DIR/bad_column_name.rs:21:25
   |
21 |     #[diesel(column_name(another))]
   |                         ^^^^^^^^^

error: expected string literal
  --> $DIR/bad_column_name.rs:28:28
   |
28 |     #[diesel(column_name = true)]
   |                            ^^^^
